[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/JosefinSans-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 46
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.43195
margin_right = -1.43195
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.337255, 0.0941176, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layout" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playground" type="ColorRect" parent="Layout"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.3
color = Color( 0.792157, 0.392157, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaygroundButton" type="Button" parent="Layout/Playground"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Playground"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level Select" type="ColorRect" parent="Layout"]
anchor_left = 0.1
anchor_top = 0.3
anchor_right = 0.9
anchor_bottom = 0.5
color = Color( 0.988235, 0.560784, 0.560784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectButton" type="Button" parent="Layout/Level Select"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Level select"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="ColorRect" parent="Layout"]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.7
color = Color( 0.792157, 0.392157, 0.392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="Layout/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ColorRect" parent="Layout"]
anchor_left = 0.1
anchor_top = 0.7
anchor_right = 0.9
anchor_bottom = 0.9
color = Color( 0.988235, 0.560784, 0.560784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Layout/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Layout/Playground/PlaygroundButton" to="." method="_on_PlaygroundButton_pressed"]
[connection signal="pressed" from="Layout/Level Select/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="Layout/Settings/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Layout/Quit/QuitButton" to="." method="_on_QuitButton_pressed"]
